...
        },
        leading: {
          Image(systemName: "at")
        }
      )
      .focused($focus, equals: .email)
      .accessibilityIdentifier("email-field")
      AuthTextField(
        text: $password,
        label: authService.string.passwordFieldLabel,
        prompt: authService.string.passwordInputLabel,
        contentType: .password,
        isSecureTextField: true,
...
        leading: {
          Image(systemName: "lock")
        }
      )
      .submitLabel(.go)
      .focused($focus, equals: .password)
      .accessibilityIdentifier("password-field")
      if authService.authenticationFlow == .signIn {
        Button {
          authService.navigator.push(.passwordRecovery)
        } label: {
          Text(authService.string.passwordButtonLabel)
            .authFont(.body, weight: .medium)
...
        }
      }
      .disabled(!isValid)
      .padding([.top, .bottom], 8)
      .frame(maxWidth: .infinity)
      .authCTAButtonStyle()
      .accessibilityIdentifier("sign-in-button")
    }
    Button(action: {
      withAnimation {
        authService.authenticationFlow =
          authService
            .authenticationFlow == .signIn ? .signUp : .signIn
...
            ? authService.string.emailLoginFlowLabel
            : authService.string.emailSignUpFlowLabel
        )
        .authFont(.body, weight: .medium)
      }
    }
    .accessibilityIdentifier("switch-auth-flow")
    .onAppear {
      if let suggestedEmailAddress = authService.suggestedEmailAddress {
        email = suggestedEmailAddress
      }
    }
    .onChange(of: authService.suggestedEmailAddress) { _, suggestedEmailAddress in
...
