...
  public var body: some View {
    VStack {
      Text(authService.string.signedInTitle)
        .authFont(.largeTitle)
        .fontWeight(.bold)
        .padding()
        .accessibilityIdentifier("signed-in-text")
      Text(
        "\(authService.currentUser?.email ?? authService.currentUser?.displayName ?? authService.currentUser?.phoneNumber ?? "")"
      )
      .authFont(.body)
      if authService.currentUser?.isEmailVerified == false {
        Button {
...
            .padding(.vertical, 8)
            .frame(maxWidth: .infinity)
        }
        .authCTAButtonStyle()
        .padding([.top, .bottom], 8)
        .frame(maxWidth: .infinity)
        .accessibilityIdentifier("mfa-management-button")
      }

      Button {
        showDeleteConfirmation = true
      } label: {
        Text(authService.string.deleteAccountButtonLabel)
...
